# viniciusbertoquintino

./: .gitignore  README.md  Readme.md  curriculo_vinicius.md  main.py  pyproject.toml  qwe.txt
.cursor/rules/: agno-rule.mdc
AI Assistant Platform — LLMs, RAG & Agents/: .env.example  README.md  docker-compose.yml  linkedin.txt
AI Assistant Platform — LLMs, RAG & Agents/backend/: Dockerfile  init.sql  requirements.txt
AI Assistant Platform — LLMs, RAG & Agents/docs/: agents-design.md  rag-flow.md
AI Assistant Platform — LLMs, RAG & Agents/src/: App.tsx  index.css
AI Assistant Platform — LLMs, RAG & Agents/supabase/: config.toml
Assistente de Viagens com LangChain/: README.md  app.py  requirements.txt
Context-Aware AI Assistant/: README.md
Newsletter Financeira com Agno/: .env_exemplo.py  01.agente.py  02.email_tool.py  prompt.py
Newsletter de Tecnologia com Agno/: 01.agente.py  03.news_tech.py  prompt.py  requirements.txt
RAG Document Analyzer/: README.md
Reconhecedor de Gestos/: README.md  Requirements.txt  attention_monitor.py  gesture_recognizer.py
estudo/: 1.1.researcher.py  1.3.own_tools.py  21_pdf_agent.py  31_memory.py  31_memory_simples.py  copy.js  ex001.py  hackernews_agent.py
estudo/agno/: 0.llm_call.py  1.1.researcher.py  1.2.analista.py  1.3.own_tools.py  31_memory_avancada.py  agente_reembolso.py  demo.py  hackernews_agent.py  multiagente.py  multiagente_bkp.py  (+2 more)
sentiment-classifier/: README.md  requirements.txt
social_media_search/: social_media_search_en.md  social_media_search_ptbr.md
video_to_mp3/: README.md  video_to_mp3.py
(+83 files in other folders)
